Add Multi Language support.

--- a/source/EnhancedSyslogConfiguration.page
+++ b/source/EnhancedSyslogConfiguration.page
@@ -12,121 +12,165 @@ Title="Configuration"
  * all copies or substantial portions of the Software.
  */
 
+$plugin = "enhanced.log";
+$docroot = $docroot ?? $_SERVER['DOCUMENT_ROOT'] ?: '/usr/local/emhttp';
+$translations = file_exists("$docroot/webGui/include/Translations.php");
+require_once "$docroot/plugins/$plugin/include/Legacy.php";
+?>
+<?if (!$translations):?>
+<?eval('?>'.parse_file("$docroot/plugins/$plugin/EnhancedSyslogConfiguration.page"))?>
+<?else:?>
+<?
+
+// read translations
+parse_plugin('EnhancedSysLog');
+
 $enhanced_log_cfg = parse_ini_file( "/boot/config/plugins/enhanced.log/enhanced.log.cfg" );
 ?>
 
 <table class="tablesorter shift ups">
-<thead><tr><th>Syslog Configuration</th></tr></thead>
+<thead><tr><th>_(Syslog Configuration)_</th></tr></thead>
 </table>
 
 <div style="width: 60%; float:left">
 	<form markdown="1" name="enhanced_log_settings" method="POST" action="/update.php" target="progressFrame">
 	<input type="hidden" name="#file" value="enhanced.log/enhanced.log.cfg">
 
-	Show All Lines in Log?
+	_(Show All Lines in Log)_?
 	: <select name="TEXT" size="1">
-		<?=mk_option($enhanced_log_cfg['TEXT'], "yes", "Yes");?>
-		<?=mk_option($enhanced_log_cfg['TEXT'], "no", "No");?>
+		<?=mk_option($enhanced_log_cfg['TEXT'], "yes", "_(Yes)_");?>
+		<?=mk_option($enhanced_log_cfg['TEXT'], "no", "_(No)_");?>
 	  </select>
 
+:enhanced_syslog_show_all_lines_plug:
 	> Set to 'Yes' to show all lines in the enhanced log.  Set to 'No' to show only highlighted lines.
+:end
 
-	Number of Lines to Display:
+	_(Number of Lines to Display)_:
 	: <input type="text" name="LINES" class="narrow" maxlength="4" value="<?=(isset($enhanced_log_cfg['LINES']) ? $enhanced_log_cfg['LINES'] : "1000");?>">
 
+:enhanced_log_number_of_lines_plug:
 	> Number of lines to display in the Enhanced Syslog.  Default is 1000.
+:end
 
-	Enable 'Error' Highlighting?
+	_(Enable 'Error' Highlighting)_?
 	: <select name="ERRORS" size="1">
-		<?=mk_option($enhanced_log_cfg['ERRORS'], "yes", "Yes");?>
-		<?=mk_option($enhanced_log_cfg['ERRORS'], "no", "No");?>
+		<?=mk_option($enhanced_log_cfg['ERRORS'], "yes", "_(Yes)_");?>
+		<?=mk_option($enhanced_log_cfg['ERRORS'], "no", "_(No)_");?>
 	  </select>
 
+:enhanced_log_enable_error_plug:
 	> Set to 'Yes' to enable 'Errors' highlighting in the enhanced log.
+:end
 
-	Enable 'Minor Issues' Highlighting?
+	_(Enable 'Minor Issues' Highlighting)_?
 	: <select name="MINOR_ISSUES" size="1">
-		<?=mk_option($enhanced_log_cfg['MINOR_ISSUES'], "yes", "Yes");?>
-		<?=mk_option($enhanced_log_cfg['MINOR_ISSUES'], "no", "No");?>
+		<?=mk_option($enhanced_log_cfg['MINOR_ISSUES'], "yes", "_(Yes)_");?>
+		<?=mk_option($enhanced_log_cfg['MINOR_ISSUES'], "no", "_(No)_");?>
 	  </select>
 
+:enhanced_log_enable_minor_plug:
 	> Set to 'Yes' to enable 'Minor Issues' highlighting in the enhanced log.
+:end
 
-	Enable 'Lime Tech' Highlighting?
+	_(Enable 'Lime Tech' Highlighting)_?
 	: <select name="LIME_TECH" size="1">
-		<?=mk_option($enhanced_log_cfg['LIME_TECH'], "yes", "Yes");?>
-		<?=mk_option($enhanced_log_cfg['LIME_TECH'], "no", "No");?>
+		<?=mk_option($enhanced_log_cfg['LIME_TECH'], "yes", "_(Yes)_");?>
+		<?=mk_option($enhanced_log_cfg['LIME_TECH'], "no", "_(No)_");?>
 	  </select>
 
+:enhanced_log_enable_limetch_plug:
 	> Set to 'Yes' to enable 'Lime Tech' highlighting in the enhanced log.
+:end
 
-	Enable 'Array' Highlighting?
+
+	_(Enable 'Array' Highlighting)_?
 	: <select name="ARRAY" size="1">
-		<?=mk_option($enhanced_log_cfg['ARRAY'], "yes", "Yes");?>
-		<?=mk_option($enhanced_log_cfg['ARRAY'], "no", "No");?>
+		<?=mk_option($enhanced_log_cfg['ARRAY'], "yes", "_(Yes)_");?>
+		<?=mk_option($enhanced_log_cfg['ARRAY'], "no", "_(No)_");?>
 	  </select>
 
+:enhanced_log_enable_array_plug:
 	> Set to 'Yes' to enable 'Array' highlighting in the enhanced log.
+:end
 
-	Enable 'System' Highlighting?
+	_(Enable 'System' Highlighting)_?
 	: <select name="SYSTEM" size="1">
-		<?=mk_option($enhanced_log_cfg['SYSTEM'], "yes", "Yes");?>
-		<?=mk_option($enhanced_log_cfg['SYSTEM'], "no", "No");?>
+		<?=mk_option($enhanced_log_cfg['SYSTEM'], "yes", "_(Yes)_");?>
+		<?=mk_option($enhanced_log_cfg['SYSTEM'], "no", "_(No)_");?>
 	  </select>
 
+:enhanced_log_enable_system_plug:
 	> Set to 'Yes' to enable 'System' highlighting in the enhanced log.
+:end
 
-	Enable 'File System' Highlighting?
+	_(Enable 'File System' Highlighting)_?
 	: <select name="FILE_SYSTEM" size="1">
-		<?=mk_option($enhanced_log_cfg['FILE_SYSTEM'], "yes", "Yes");?>
-		<?=mk_option($enhanced_log_cfg['FILE_SYSTEM'], "no", "No");?>
+		<?=mk_option($enhanced_log_cfg['FILE_SYSTEM'], "yes", "_(Yes)_");?>
+		<?=mk_option($enhanced_log_cfg['FILE_SYSTEM'], "no", "_(No)_");?>
 	  </select>
 
+:enhanced_log_enable_file_system_plug:
 	> Set to 'Yes' to enable 'File System' highlighting in the enhanced log.
+:end
 
-	Enable 'Drive Related' Highlighting?
+	_(Enable 'Drive Related' Highlighting)_?
 	: <select name="DRIVE_RELATED" size="1">
-		<?=mk_option($enhanced_log_cfg['DRIVE_RELATED'], "yes", "Yes");?>
-		<?=mk_option($enhanced_log_cfg['DRIVE_RELATED'], "no", "No");?>
+		<?=mk_option($enhanced_log_cfg['DRIVE_RELATED'], "yes", "_(Yes)_");?>
+		<?=mk_option($enhanced_log_cfg['DRIVE_RELATED'], "no", "_(No)_");?>
 	  </select>
 
+:enhanced_log_enable_drive_plug:
 	> Set to 'Yes' to enable 'Drive Related' highlighting in the enhanced log.
+:end
 
-	Enable 'Network' Highlighting?
+	_(Enable 'Network' Highlighting)_?
 	: <select name="NETWORK" size="1">
-		<?=mk_option($enhanced_log_cfg['NETWORK'], "yes", "Yes");?>
-		<?=mk_option($enhanced_log_cfg['NETWORK'], "no", "No");?>
+		<?=mk_option($enhanced_log_cfg['NETWORK'], "yes", "_(Yes)_");?>
+		<?=mk_option($enhanced_log_cfg['NETWORK'], "no", "_(No)_");?>
 	  </select>
 
+:enhanced_log_enable_network_plug:
 	> Set to 'Yes' to enable 'Network' highlighting in the enhanced log.
+:end
 
-	Enable 'Login' Highlighting?
+	_(Enable 'Login' Highlighting)_?
 	: <select name="LOGIN" size="1">
-		<?=mk_option($enhanced_log_cfg['LOGIN'], "yes", "Yes");?>
-		<?=mk_option($enhanced_log_cfg['LOGIN'], "no", "No");?>
+		<?=mk_option($enhanced_log_cfg['LOGIN'], "yes", "_(Yes)_");?>
+		<?=mk_option($enhanced_log_cfg['LOGIN'], "no", "_(No)_");?>
 	  </select>
 
+:enhanced_log_enable_login_plug:
 	> Set to 'Yes' to enable 'Login' highlighting in the enhanced log.
+:end
 
-	Enable 'emhttp' Highlighting?
+	_(Enable 'emhttp' Highlighting)_?
 	: <select name="EMHTTP" size="1">
-		<?=mk_option($enhanced_log_cfg['EMHTTP'], "yes", "Yes");?>
-		<?=mk_option($enhanced_log_cfg['EMHTTP'], "no", "No");?>
+		<?=mk_option($enhanced_log_cfg['EMHTTP'], "yes", "_(Yes)_");?>
+		<?=mk_option($enhanced_log_cfg['EMHTTP'], "no", "_(No)_");?>
 	  </select>
 
+:enhanced_log_enable_emhttp_plug:
 	> Set to 'Yes' to enable 'emhttp' highlighting in the enhanced log.
+:end
 
-	Enable 'Other' Highlighting?
+	_(Enable 'Other' Highlighting)_?
 	: <select name="OTHER" size="1">
-		<?=mk_option($enhanced_log_cfg['OTHER'], "yes", "Yes");?>
-		<?=mk_option($enhanced_log_cfg['OTHER'], "no", "No");?>
+		<?=mk_option($enhanced_log_cfg['OTHER'], "yes", "_(Yes)_");?>
+		<?=mk_option($enhanced_log_cfg['OTHER'], "no", "_(No)_");?>
 	  </select>
 
+:enhanced_log_enable_other_plug:
 	> Set to 'Yes' to enable 'Other' highlighting in the enhanced log.
+:end
 
-	<input type="submit" name="#default" value="Default">
-	: <input type="submit" name="#apply" value="Apply"><input type="button" value="Done" onclick="done()">
+	<input type="submit" name="#default" value="_(Default)_">
+	: <input type="submit" name="#apply" value="_(Apply)_"><input type="button" value="_(Done)_" onclick="done()">
 
+:enhancd_log_default_plug:
 	> 'Default' resets the Configuration and Colors.  Click 'Apply' to save your changes.  Click 'Done' when you are finished with your changes.
+:end
+
 	</form>
 </div>
+<?endif;?>
