--- a/source/EnhancedSyslog.page
+++ b/source/EnhancedSyslog.page
@@ -14,6 +14,15 @@ Icon="align-left"
  * The above copyright notice and this permission notice shall be included in
  * all copies or substantial portions of the Software.
  */
+$plugin = "enhanced.log";
+$docroot = $docroot ?? $_SERVER['DOCUMENT_ROOT'] ?: '/usr/local/emhttp';
+$translations = file_exists("$docroot/webGui/include/Translations.php");
+require_once "$docroot/plugins/$plugin/include/Legacy.php";
+?>
+<?if (!$translations):?>
+<?eval('?>'.parse_file("$docroot/plugins/$plugin/EnhancedSyslog.page"))?>
+<?else:?>
+<?
 
 $zip = str_replace(' ','_',strtolower($var['NAME']))."-syslog-".date('Ymd-Hi').".zip";
 
@@ -40,77 +49,77 @@ if ($display['theme'] == 'white' || $display['theme'] == 'black') {
 
 if ($enhanced_log_cfg['ERRORS'] == "yes") {
 	$errors_color = $enhanced_log_cfg['ERRORS_CLR'];
-	$errors_tag = "<span style='background-color:$errors_color; font-size: $font_size'>&nbsp;Errors&nbsp;</span>&nbsp;&nbsp;&nbsp;";
+	$errors_tag = "<span style='background-color:$errors_color; font-size: $font_size'>&nbsp;_(Errors)_&nbsp;</span>&nbsp;&nbsp;&nbsp;";
 } else {
 	$errors_color = "";
 }
 
 if ($enhanced_log_cfg['MINOR_ISSUES'] == "yes") {
 	$minor_issues_color = $enhanced_log_cfg['MINOR_ISSUES_CLR'];
-	$minor_issues_tag = "<span style='background-color:$minor_issues_color; font-size: $font_size'>&nbspMinor Issues&nbsp</span>&nbsp;&nbsp;&nbsp;";
+	$minor_issues_tag = "<span style='background-color:$minor_issues_color; font-size: $font_size'>&nbsp_(Minor Issues)_&nbsp</span>&nbsp;&nbsp;&nbsp;";
 } else {
 	$minor_issues_color = "";
 }
 
 if ($enhanced_log_cfg['LIME_TECH'] == "yes") {
 	$lime_tech_color = $enhanced_log_cfg['LIME_TECH_CLR'];
-	$lime_tech_tag = "<span style='background-color:$lime_tech_color; font-size: $font_size'>&nbsp;Lime Tech&nbsp;</span>&nbsp;&nbsp;&nbsp;";
+	$lime_tech_tag = "<span style='background-color:$lime_tech_color; font-size: $font_size'>&nbsp;_(Lime Tech)_&nbsp;</span>&nbsp;&nbsp;&nbsp;";
 } else {
 	$lime_tech_color = "";
 }
 
 if ($enhanced_log_cfg['ARRAY'] == "yes") {
 	$array_color = $enhanced_log_cfg['ARRAY_CLR'];
-	$array_tag = "<span style='background-color:$array_color; font-size: $font_size'>&nbsp;Array&nbsp;</span>&nbsp;&nbsp;&nbsp;";
+	$array_tag = "<span style='background-color:$array_color; font-size: $font_size'>&nbsp;_(Array)_&nbsp;</span>&nbsp;&nbsp;&nbsp;";
 } else {
 	$array_color = "";
 }
 
 if ($enhanced_log_cfg['SYSTEM'] == "yes") {
 	$system_color = $enhanced_log_cfg['SYSTEM_CLR'];
-	$system_tag = "<span style='background-color:$system_color; font-size: $font_size'>&nbsp;System&nbsp;</span>&nbsp;&nbsp;&nbsp;";
+	$system_tag = "<span style='background-color:$system_color; font-size: $font_size'>&nbsp;_(System)_&nbsp;</span>&nbsp;&nbsp;&nbsp;";
 } else {
 	$system_color = "";
 }
 
 if ($enhanced_log_cfg['FILE_SYSTEM'] == "yes") {
 	$file_system_color = $enhanced_log_cfg['FILE_SYSTEM_CLR'];
-	$file_system_tag = "<span style='background-color:$file_system_color; font-size: $font_size'>&nbsp;File System&nbsp;</span>&nbsp;&nbsp;&nbsp;";
+	$file_system_tag = "<span style='background-color:$file_system_color; font-size: $font_size'>&nbsp;_(File System)_&nbsp;</span>&nbsp;&nbsp;&nbsp;";
 } else {
 	$file_system_color = "";
 }
 
 if ($enhanced_log_cfg['DRIVE_RELATED'] == "yes") {
 	$drive_related_color = $enhanced_log_cfg['DRIVE_RELATED_CLR'];
-	$drive_related_tag = "<span style='background-color:$drive_related_color; font-size: $font_size'>&nbsp;Drive Related&nbsp;</span>&nbsp;&nbsp;&nbsp;";
+	$drive_related_tag = "<span style='background-color:$drive_related_color; font-size: $font_size'>&nbsp;_(Drive Related)_&nbsp;</span>&nbsp;&nbsp;&nbsp;";
 } else {
 	$drive_related_color = "";
 }
 
 if ($enhanced_log_cfg['NETWORK'] == "yes") {
 	$network_color = $enhanced_log_cfg['NETWORK_CLR'];
-	$network_tag = "<span style='background-color:$network_color; font-size: $font_size'>&nbsp;Network&nbsp;</span>&nbsp;&nbsp;&nbsp;";
+	$network_tag = "<span style='background-color:$network_color; font-size: $font_size'>&nbsp;_(Network)_&nbsp;</span>&nbsp;&nbsp;&nbsp;";
 } else {
 	$network_color = "";
 }
 
 if ($enhanced_log_cfg['LOGIN'] == "yes") {
 	$login_color = $enhanced_log_cfg['LOGIN_CLR'];
-	$login_tag = "<span style='background-color:$login_color; font-size: $font_size'>&nbsp;Login&nbsp;</span>&nbsp;&nbsp;&nbsp;";
+	$login_tag = "<span style='background-color:$login_color; font-size: $font_size'>&nbsp;_(Login)_&nbsp;</span>&nbsp;&nbsp;&nbsp;";
 } else {
 	$login_color = "";
 }
 
 if ($enhanced_log_cfg['EMHTTP'] == "yes") {
 	$emhttp_color = $enhanced_log_cfg['EMHTTP_CLR'];
-	$emhttp_tag = "<span style='background-color:$emhttp_color; font-size: $font_size'>&nbsp;emhttp&nbsp;</span>&nbsp;&nbsp;&nbsp;";
+	$emhttp_tag = "<span style='background-color:$emhttp_color; font-size: $font_size'>&nbsp;_(emhttp)_&nbsp;</span>&nbsp;&nbsp;&nbsp;";
 } else {
 	$emhttp_color = "";
 }
 
 if ($enhanced_log_cfg['OTHER'] == "yes") {
 	$other_color = $enhanced_log_cfg['OTHER_CLR'];
-	$other_tag = "<span style='background-color:$other_color; font-size: $font_size'>&nbsp;Other&nbsp;</span>";
+	$other_tag = "<span style='background-color:$other_color; font-size: $font_size'>&nbsp;_(Other)_&nbsp;</span>";
 } else {
 	$other_color = "";
 }
@@ -246,4 +255,5 @@ $(function() {
 <?endif;?>
 </script>
 
-<input type="button" value="Download" onclick="getlog()"><input type="button" value="Refresh" onclick="refresh()"><input type="button" value="Done" onclick="done()">
+<input type="button" value="_(Download)_" onclick="getlog()"><input type="button" value="_(Refresh)_" onclick="refresh()"><input type="button" value="_(Done)_" onclick="done()">
+<?endif;?>
