Change default number of lines to show.

--- a/source/EnhancedSyslogConfiguration.page
+++ b/source/EnhancedSyslogConfiguration.page
@@ -47,7 +47,7 @@ $enhanced_log_cfg = parse_ini_file( "/boot/config/plugins/enhanced.log/enhanced.
 :end
 
 	_(Number of Lines to Display)_:
-	: <input type="text" name="LINES" class="narrow" maxlength="4" value="<?=(isset($enhanced_log_cfg['LINES']) ? $enhanced_log_cfg['LINES'] : "1000");?>">
+	: <input type="text" name="LINES" class="narrow" maxlength="4" value="<?=$enhanced_log_cfg['LINES'];?>" placeholder="1000">
 
 :enhanced_log_number_of_lines_plug:
 	> Number of lines to display in the Enhanced Syslog.  Default is 1000.
