--- a/source/EnhancedSyslog.page
+++ b/source/EnhancedSyslog.page
@@ -5,7 +5,7 @@ Icon="align-left"
 <?php
 /* Copyright 2015-2016, Lime Technology
  * Copyright 2015-2016, Bergware International.
- * Copyright 2015-2020, Dan Landon
+ * Copyright 2015-2021, Dan Landon
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License version 2,
@@ -28,7 +28,7 @@ $zip = str_replace(' ','_',strtolower($var['NAME']))."-syslog-".date('Ymd-Hi')."
 
 /* Assign events and colors from configuration file. */
 $enhanced_log_cfg = parse_ini_file( "/boot/config/plugins/enhanced.log/enhanced.log.cfg" );
-$display_lines = (isset($enhanced_log_cfg['LINES']) ? $enhanced_log_cfg['LINES'] : 1000);
+$display_lines = (isset($enhanced_log_cfg['LINES']) && $enhanced_log_cfg['LINES'] != "" ? $enhanced_log_cfg['LINES'] : 1000);
 
 /* Array of strings and highlight colors - "match string", "event". */
 $pre_defined = array_map('str_getcsv', file('plugins/enhanced.log/syslog_match.conf'));
