Fix help to be consistent with other plugins.

--- a/source/EnhancedSyslogColors.page
+++ b/source/EnhancedSyslogColors.page
@@ -32,7 +32,7 @@ $enhanced_log_cfg = parse_ini_file( "/boot/config/plugins/enhanced.log/enhanced.
 <thead><tr><th>_(Syslog Colors)_</th></tr></thead>
 </table>
 
-<div style="width: 60%; float:left">
+<div style="width: 100%; float:left">
 	<form markdown="1" name="enhanced_log_settings" method="POST" action="/update.php" target="progressFrame">
 	<input type="hidden" name="#file" value="enhanced.log/enhanced.log.cfg">
 	<span style="float:right;margin-right:10px"><a href="http://www.w3schools.com/colors/colors_names.asp" target="_blank" title="Color Selection Chart"> <u>_(Color Selection Chart)_</u></a></span>
@@ -41,83 +41,83 @@ $enhanced_log_cfg = parse_ini_file( "/boot/config/plugins/enhanced.log/enhanced.
 	: <input type="text" name="ERRORS_CLR" class="narrow" maxlength="20" value="<?=$enhanced_log_cfg['ERRORS_CLR'];?>">
 
 :enhanced_log_color_error_plug:
-	> Color to use for 'Error' highlighting.  You can use the color name or number.  The color number begins with a '#'.
+	> Color to use for **Error** highlighting.  You can use the color name or number.  The color number begins with a '#'.
 :end
 
 	_('Minor Issues' Highlight Color)_:
 	: <input type="text" name="MINOR_ISSUES_CLR" class="narrow" maxlength="20" value="<?=$enhanced_log_cfg['MINOR_ISSUES_CLR'];?>">
 
 :enhanced_log_color_minor_plug:
-	> Color to use for 'Minor Issues' highlighting.  You can use the color name or number.  The color number begins with a '#'.
+	> Color to use for **Minor Issues** highlighting.  You can use the color name or number.  The color number begins with a '#'.
 :end
 
 	_('Lime Tech' Highlight Color)_:
 	: <input type="text" name="LIME_TECH_CLR" class="narrow" maxlength="20" value="<?=$enhanced_log_cfg['LIME_TECH_CLR'];?>">
 
 :enhanced_log_color_limetech_plug:
-	> Color to use for 'Lime Tech' highlighting.  You can use the color name or number.  The color number begins with a '#'.
+	> Color to use for **Lime Tech** highlighting.  You can use the color name or number.  The color number begins with a '#'.
 :end
 
 	_('Array' Highlight Color)_:
 	: <input type="text" name="ARRAY_CLR" class="narrow" maxlength="20" value="<?=$enhanced_log_cfg['ARRAY_CLR'];?>">
 
 :enhanced_log_color_array_plug:
-	> Color to use for 'Array' highlighting.  You can use the color name or number.  The color number begins with a '#'.
+	> Color to use for **Array** highlighting.  You can use the color name or number.  The color number begins with a '#'.
 :end
 
 	_('System' Highlight Color)_:
 	: <input type="text" name="SYSTEM_CLR" class="narrow" maxlength="20" value="<?=$enhanced_log_cfg['SYSTEM_CLR'];?>">
 
 :enhanced_log_color_system_plug:
-	> Color to use for 'System' highlighting.  You can use the color name or number.  The color number begins with a '#'.
+	> Color to use for **System** highlighting.  You can use the color name or number.  The color number begins with a '#'.
 :end
 
 	_('File System' Highlight Color)_:
 	: <input type="text" name="FILE_SYSTEM_CLR" class="narrow" maxlength="20" value="<?=$enhanced_log_cfg['FILE_SYSTEM_CLR'];?>">
 
 :enhanced_log_color_file_system_plug:
-	> Color to use for 'File System' highlighting.  You can use the color name or number.  The color number begins with a '#'.
+	> Color to use for **File System** highlighting.  You can use the color name or number.  The color number begins with a '#'.
 :end
 
 	_('Drive Related' Highlight Color)_
 	: <input type="text" name="DRIVE_RELATED_CLR" class="narrow" maxlength="20" value="<?=$enhanced_log_cfg['DRIVE_RELATED_CLR'];?>">
 
 :enhanced_log_color_drive_plug:
-	> Color to use for 'Drive Related' highlighting.  You can use the color name or number.  The color number begins with a '#'.
+	> Color to use for **Drive Related** highlighting.  You can use the color name or number.  The color number begins with a '#'.
 :end
 
 	_('Network' Highlight Color)_
 	: <input type="text" name="NETWORK_CLR" class="narrow" maxlength="20" value="<?=$enhanced_log_cfg['NETWORK_CLR'];?>">
 
 :enhanced_log_color_network_plug:
-	> Color to use for 'Network' highlighting.  You can use the color name or number.  The color number begins with a '#'.
+	> Color to use for **Network** highlighting.  You can use the color name or number.  The color number begins with a '#'.
 :end
 
 	_('Login' Highlight Color)_
 	: <input type="text" name="LOGIN_CLR" class="narrow" maxlength="20" value="<?=$enhanced_log_cfg['LOGIN_CLR'];?>">
 
 :enhanced_log_color_login_plug:
-	> Color to use for 'Login' highlighting.  You can use the color name or number.  The color number begins with a '#'.
+	> Color to use for **Login** highlighting.  You can use the color name or number.  The color number begins with a '#'.
 :end
 
 	_('emhttp' Highlight Color)_
 	: <input type="text" name="EMHTTP_CLR" class="narrow" maxlength="20" value="<?=$enhanced_log_cfg['EMHTTP_CLR'];?>">
 
 :enhanced_log_color_emhttp_plug:
-	> Color to use for 'emhttp' highlighting.  You can use the color name or number.  The color number begins with a '#'.
+	> Color to use for **emhttp** highlighting.  You can use the color name or number.  The color number begins with a '#'.
 :end
 
 	_('Other' Highlight Color)_
 	: <input type="text" name="OTHER_CLR" class="narrow" maxlength="20" value="<?=$enhanced_log_cfg['OTHER_CLR'];?>">
 
 :enhanced_log_color_other_plug:
-	> Color to use for 'Other' highlighting.  You can use the color name or number.  The color number begins with a '#'.
+	> Color to use for **Other** highlighting.  You can use the color name or number.  The color number begins with a '#'.
 :end
 
 	<input type="submit" name="#default" value="_(Default)_">
 	: <input type="submit" name="#apply" value="_(Apply)_"><input type="button" value="_(Done)_" onclick="done()">
 
-	> 'Default' resets the Configuration and Colors.  Click 'Apply' to save your changes.  Click 'Done' when you are finished with your changes.
+	> **Default** resets the Configuration and Colors.  Click **Apply** to save your changes.  Click **Done** when you are finished with your changes.
 	</form>
 </div>
 <?endif;?>
