Revert "Add confirmation on unsaved forms."
This reverts commit e6c3a2f2a979dd26f39a4b8fc706f5cd2b49ecca.

--- a/source/EnhancedSyslog.page
+++ b/source/EnhancedSyslog.page
@@ -255,7 +255,5 @@ $(function() {
 <?endif;?>
 </script>
 
-<input type="button" value="_(Download)_" onclick="getlog()">
-<input type="button" value="_(Refresh)_" onclick="refresh()">
-<input type="button" value="_(Done)_" onclick="done()">
+<input type="button" value="_(Download)_" onclick="getlog()"><input type="button" value="_(Refresh)_" onclick="refresh()"><input type="button" value="_(Done)_" onclick="done()">
 <?endif;?>
