--- a/source/EnhancedSyslogCustom.page
+++ b/source/EnhancedSyslogCustom.page
@@ -59,7 +59,7 @@ function setDefault(form) {
 	: <textarea spellcheck="false" cols="80" rows="22" maxlength="2048" name="text" style="font-family:bitstream;width:70%"><?=$text;?></textarea>
 
 	<dl><dt>&nbsp;</dt><dd>
-	<input type="submit" value="_(Apply)_"/><input type="button" value="_(Done)_" onclick="done()">
+	<input type="submit" value='_(Apply)_'><input type="button" value="_(Done)_" onclick="done()">
 	</dd></dl>
 
 :enhanced_log_custom_buttons_plug:
