--- a/source/EnhancedSyslogFilter.page
+++ b/source/EnhancedSyslogFilter.page
@@ -55,7 +55,7 @@ function setDefault(form) {
 	<dl><dt>&nbsp;</dt><dd>
 		<form name="apply_syslog_filter" method="POST" action="/update.php" target="progressFrame">
 			<input type="hidden" name="#command" value="/plugins/enhanced.log/scripts/rc.enhanced.log">
-			<input type="submit" value="_(Apply)_" title="Apply Syslog Filter."><input type="button" value="_(Done)_" onclick="done()">
+			<input type="submit" value="_(Apply)_"><input type="button" value="_(Done)_" onclick="done()">
 		</form>
 	</dd></dl>
 
