Adjust button height so they are not hidden.

--- a/source/EnhancedSyslogFilter.page
+++ b/source/EnhancedSyslogFilter.page
@@ -2,7 +2,7 @@ Menu="EnhancedSyslogSettings:4"
 Title="Syslog Filter"
 ---
 <?php
-/* Copyright 2015-2020, Dan Landon
+/* Copyright 2015-2022, Dan Landon
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License version 2,
@@ -29,8 +29,9 @@ parse_plugin('EnhancedSysLog');
 </table>
 
 :enhanced_log_filter_plug:
-> You can filter out log entries to keep your Syslog from being overwhelmed with debig or redundant log entries.  You should only filter out log entries that you know are unnecessary or redundant.
+> You can filter out log entries to keep your Syslog from being overwhelmed with debug or redundant log entries.  You should only filter out log entries that you know are unnecessary or redundant.
 > Because the Syslog is very important for debugging issues, don't filter out entries unnecessarily.
+>
 > Enter the log strings you want to filtered from the Syslog.  Each entry is on a separate line with leading and trailing quotes.
 :end
  
